@@ -2,6 +2,10 @@
 VERSION 0.8.1cvs
 ================
 
+2005-12-18  Vincent Richard  <vincent@vincent-richard.net>
+
+ * IMAPParser.hpp: compatibility bugs + enhanced debugging trace.
+
 2005-12-04  Vincent Richard  <vincent@vincent-richard.net>
 
  * exception.{hpp|cpp}: fixed segfault in destructor when destroying
